frontend/test/should_fail/from_storage_005.grg
using from_storage;

test t1(ref m:map<Node, Node>)
{
	x:Node{m[x]};
}

